--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1767,7 +1767,7 @@
 				background-repeat:		repeat,							no-repeat;
 				background-size:		auto,							cover;
 				bottom: 0;
-				left: auto;
+				left: 0;
 				padding: 1em;
 				position: fixed;
 				text-align: center;
