--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1711,6 +1711,7 @@
 
 			#header {
 				background-attachment:	scroll;
+				background-image:		url('../../images/overlay.png'),			url('../../images/background-print.jpg');
 				background-position:	top left,	center center;
 				background-size:		auto,		cover;
 				left: auto;
